--- a/css/studio.css
+++ b/css/studio.css
@@ -13,6 +13,7 @@
   --button-border: #e7e9fc;
   --customer-border: #8e8f99;
   --hover-media: #31d0aa;
+  --moddal-color: #fcfcfc;
   --animation: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -472,7 +473,7 @@ a {
   width: 408px;
   height: 576px;
   transform: translate(-50%, -50%);
-  background-color: #fcfcfc;
+  background-color: var(--moddal-color);
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
@@ -487,7 +488,7 @@ a {
   align-items: center;
   justify-content: center;
   border-radius: 50%;
-  background-color: #e7e9fc;
+  background-color: var(--button-border);
   border: 1px solid rgba(0, 0, 0, 0.1);
 }
 .backdrop.is-hidden {
@@ -495,4 +496,155 @@ a {
   visibility: hidden;
   pointer-events: none;
   transition: opacity var(--animation);
+}
+.modal-form {
+  display: flex;
+  flex-flow: column;
+  width: 408px;
+  padding: 24px;
+  padding-top: 72px;
+}
+.wrap-form {
+  display: flex;
+  flex-flow: column;
+}
+.wrap-form + .wrap-form {
+  margin-top: 8px;
+}
+
+.wrap-label {
+  display: block;
+  margin-bottom: 4px;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 0.01em;
+  color: var(--customer-border);
+}
+.wrap-textarea {
+  margin-top: 8px;
+}
+.wrap-comment {
+  width: 100%;
+  height: 120px;
+  resize: none;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+}
+.wrap-comment:focus {
+  outline: none;
+  border: 1px solid var(--button-active-background);
+}
+.wrap-input:focus + .wrap-input--icon {
+  fill: var(--button-active-background);
+}
+.wrap-comment::placeholder {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 16px;
+  letter-spacing: 0.04em;
+  color: rgba(117, 117, 117, 0.5);
+}
+.wrap-header {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: var(--secondary-text-color);
+  margin-bottom: 16px;
+}
+.wrap-input {
+  width: 100%;
+  height: 40px;
+  padding-right: 10px;
+  padding-left: 40px;
+  border: 1px solid red;
+  border-radius: 4px;
+}
+.wrap-input:focus {
+  outline: none;
+  border: 1px solid var(--accent-logo-color);
+}
+.wrap-icon {
+  position: relative;
+}
+.wrap-input--icon {
+  position: absolute;
+  fill: var(--secondary-text-color);
+  top: 11px;
+  left: 16px;
+}
+.wrap-checkbox {
+  display: flex;
+  align-items: baseline;
+  justify-content: center;
+}
+.btn-send {
+  width: 169px;
+  height: 56px;
+  padding: 16px 32px;
+  margin-top: 24px;
+  margin-left: auto;
+  margin-right: auto;
+
+  background: var(--accent-logo-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  color: var(--button-text-active);
+  transition: background-color var(--animation);
+
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+}
+.btn-send:hover,
+.btn-send:focus {
+  background-color: var(--button-main-text);
+}
+.wrap-label--link {
+  color: var(--accent-logo-color);
+  text-decoration: underline;
+}
+.footer-form {
+  margin-left: 80px;
+}
+.footer-email {
+  display: flex;
+}
+.footer-form_text {
+  display: block;
+  margin-bottom: 16px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--button-text-active);
+}
+.btn-subscribe {
+  position: relative;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+
+  color: var(--button-text-active);
+  width: 165px;
+  padding: 8px 24px;
+  margin-left: 24px;
+  background-color: var(--accent-logo-color);
+  border-radius: 4px;
+  transition: background-color var(--animation);
+}
+.btn-subscribe:hover,
+.btn-subscribe:focus {
+  background-color: var(--accent-link-color);
+}
+
+.footer-date {
+  background-color: var(--secondary-text-color);
+  width: 264px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
 }
