--- a/css/studio.css
+++ b/css/studio.css
@@ -559,7 +559,7 @@ a {
   height: 40px;
   padding-right: 10px;
   padding-left: 40px;
-  border: 1px solid red;
+  border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
 }
 .wrap-input:focus {
@@ -591,6 +591,7 @@ a {
   background: var(--accent-logo-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
+  border-color: var(--accent-logo-color);
   color: var(--button-text-active);
   transition: background-color var(--animation);
 
@@ -634,6 +635,7 @@ a {
   padding: 8px 24px;
   margin-left: 24px;
   background-color: var(--accent-logo-color);
+  border-color: var(--accent-logo-color);
   border-radius: 4px;
   transition: background-color var(--animation);
 }
